Fixing up display on mobile.

--- a/FantasyCritic.Web/ClientApp/css/site.css
+++ b/FantasyCritic.Web/ClientApp/css/site.css
@@ -124,3 +124,8 @@ div.alert {
         display: none;
     }
 }
+
+.right-button {
+    text-align: right;
+    margin-right: 10px;
+}
